<resources>
    <string name="app_name">Assignment 2</string>
    <string name="manager">MANAGER</string>
    <string name="total">Total</string>
    <string name="product">Product Type</string>
    <string name="quantity">Quantity</string>
    <string name="buy">BUY</string>
    <string name="pants">Pants</string>
    <string name="shoes">Shoes</string>
    <string name="hats">Hats</string>
    <string name="price">Price</string>
    <string name="productName">product</string>
    <string name="amount">amount</string>
    <string name="pantsQuantity">30</string>
    <string name="shoesQuantity">50</string>
    <string name="hatsQuanaity">20</string>
    <string name="nostock">Not enough quantity in stock!</string>
    <string name="requiredfield">All fields are required!</string>
    <string name="history">HISTORY</string>
    <string name="restock">RESTOCK</string>
    <string name="newQuantity">Enter New Quantity</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="thanks">Thank You for your purchase</string>




</resources>